--- a/前端/看到的面试题.md
+++ b/前端/看到的面试题.md
@@ -93,17 +93,22 @@ function a(func){
 * 这样还是没有解决数序的问题，但是从`a`本身剥离出一个`b`
 
 ```js
-//a(1).a(2)(3)  -> 213
-//a(1)(2).a(3)  -> 321
+//a(1)._a(2)(3)  -> 213
+//a(1)(2)._a(3)  -> 321
 function a(func){
-    var b = function(){
-
+    var b = function(b_func){
+        b_func()
+        return b
     }
 
-    b.a = a
-
-    b()
+    b._a = function(_func){
+        _func()
+        b(func)
+        return b
+    }
 
     return b
 }
 ```
+
+结果不对，还得再看看
